# metadata-to-erd

./: .env.sample  LICENSE  README.md  TODO.md  click_command.py  fire_command.py  main.py  pyproject.toml  requirements.txt  test.py
samples/: d2_sample.d2  mermaid_sample.mmd  plantuml_sample.puml
src/: converter.py  d2_erd.py  database.py  mermaid_erd.py  plantuml_erd.py
tests/: conftest.py  test_commands.py  test_converters.py  test_database.py  test_erd_generators.py
